[package]
name = "usbip"
version = "0.1.0"
authors = ["Aaron Perez <aap7640@gmail.com>"]
edition = "2021"

[dependencies]
usbip_server = { version = "0.1.0", optional = true, path = "../usbip_server" }
usbip-core = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
libc = "0.2.153"
bincode = "1.3.3"

[features]
server = ["usbip_server"]
